[package]
authors = ['DotMatrix <hello@dotmatrix.im>']
description = 'Anmol utils pallet'
edition = '2018'
homepage = 'https://anmol.network/'
license = 'GNU Affero General Public License v3.0'
name = 'anmol-utils'
readme = 'README.md'
repository = 'https://github.com/anmolnetwork/anmol-node/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-std = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
]
